Corrige bloqueadores del cifrador en Linux
- corrige el manejo de rutas para aceptar entradas absolutas y relativas sin concatenar manualmente el cwd

- agrega un cargador de bibliotecas nativas que relanza el JAR con java.library.path cuando detecta libs locales

- mejora el diagnostico al cargar la llave publica reportando la causa raiz cuando falta una dependencia nativa

- incorpora pruebas de integracion para cifrado con rutas relativas y absolutas

- configura Maven Surefire para ejecutar las pruebas con las bibliotecas nativas del proyecto

- documenta y marca como resueltos los bloqueadores validados en Linux en BLOQUEADORES.md